--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 title: Welcome to mleith785 homepage!
-description: Under construction.
+description: A portfolio of work done for CS499.
+
+
