--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll/minima
+remote_theme: jekyll/minima
 title: Welcome to mleith785 homepage!
 description: A portfolio of work done for CS499.
 
