--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
-
+theme: jekyll-theme-minimal
 title: Welcome to mleith785 homepage!
 description: A portfolio of work done for CS499.
-
-remote_theme: jekyll/minima
-
 
